[metadata]
name = billingstack
summary = Subscription based Billing in Python
description-file =
    README.rst
author = Endre Karlson
author-email = dev@billingstack.org
home-page = http://www.billingstack.org/
classifier =
    Environment :: Any
    Intended Audience :: Information Technology
    Intended Audience :: Financial People
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    billingstack
scripts =
    bin/billingstack-db-manage
    bin/billingstack-manage
    bin/billingstack-api

[entry_points]
console_scripts =
    billingstack-biller = billingstack.biller.service:launch
    billingstack-central = billingstack.central.service:launch
    billingstack-collector = billingstack.collector.service:launch
    billingstack-rater = billingstack.rater.service:launch

billingstack.central.storage =
    sqlalchemy = billingstack.central.storage.impl_sqlalchemy:SQLAlchemyEngine

billingstack.biller.storage =
    sqlalchemy = billingstack.biller.storage.impl_sqlalchemy:SQLAlchemyEngine

billingstack.rater.storage =
    sqlalchemy = billingstack.rater.storage.impl_sqlalchemy:SQLAlchemyEngine

billingstack.payment_gateway =
    dummy = billingstack.payment_gateway.dummy:DummyProvider

billingstack.manage =
    pg-register = billingstack.manage.provider:ProvidersRegister
    pg-list = billingstack.manage.provider:ProvidersList

[build_sphinx]
source-dir = doc/source
build-dir  = doc/build
all_files  = 1

[upload_docs]
upload-dir = doc/build/html

[nosetests]
cover-package = billingstack
cover-html = true
cover-erase = true
cover-inclusive = true
verbosity=2
detailed-errors=1
where=billingstack.tests
